--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El contador 2 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alarum: Codigo Letal -->
+<li>
+  <a href="../Peliculas/pelicula631.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/chIQxgimGbIFnuFsLqpcoTbsH9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Alarum: Código Letal 2025</span>
+    <span class="hidden">Joe y Lara Travers aparentan ser una pareja que está de vacaciones, pero esto no es lo que parece… realmente son unos espías encubiertos, pero no sabemos hasta qué punto, todo lo que sabemos es que están viajando armados hasta los dientes y definitivamente no son del tipo de la pareja promedio, y tampoco tienen idea de todo lo que pueden estar detrás de esta nueva misión.</span>
+  </a>
+</li>
+<!--FIN--><!-- El contador 2 -->
 <li>
   <a href="../Peliculas/pelicula630.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
