--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,13 +156,22 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alarum: Codigo Letal -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Leyenda de Ochi -->
+<li>
+  <a href="../Peliculas/pelicula632.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/uyz9qcZdIrUqVrwly3KB5oPUKZO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Leyenda de Ochi 2025</span>
+    <span class="hidden">En una aldea remota de la isla de Carpatia, Yuri, una tímida campesina, es criada con el miedo a una especie animal esquiva llamada ochi. Pero cuando Yuri descubre que han abandonado a un bebé ochi herido, emprende una misión para traerlo a casa</span>
+  </a>
+</li>
+<!--FIN--><!-- Alarum: Codigo Letal -->
 <li>
   <a href="../Peliculas/pelicula631.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/chIQxgimGbIFnuFsLqpcoTbsH9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Alarum: Código Letal 2025</span>
-    <span class="hidden">doble espionaje Joe y Lara Travers aparentan ser una pareja que está de vacaciones, pero esto no es lo que parece… realmente son unos espías encubiertos, pero no sabemos hasta qué punto, todo lo que sabemos es que están viajando armados hasta los dientes y definitivamente no son del tipo de la pareja promedio, y tampoco tienen idea de todo lo que pueden estar detrás de esta nueva misión.</span>
+    <span class="hidden">doble espionaje Joe y Lara Travers aparentan ser una pareja que está de vacaciones, pero esto no es lo que parece⬦ realmente son unos espías encubiertos, pero no sabemos hasta qué punto, todo lo que sabemos es que están viajando armados hasta los dientes y definitivamente no son del tipo de la pareja promedio, y tampoco tienen idea de todo lo que pueden estar detrás de esta nueva misión.</span>
   </a>
 </li>
 <!--FIN--><!-- El contador 2 -->
