--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 4 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 5 -->
+<li>
+  <a href="../Peliculas/pelicula656.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/uWKJyIISWzP7KmB2vcgrX7xyhUh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Scream 5 2022</span>
+    <span class="hidden">Veinticinco años después de que una racha de asesinatos brutales conmocionara a la tranquila ciudad de Woodsboro, un nuevo asesino imitador se ha puesto la máscara de Ghostface para resucitar secretos mortales del pasado.</span>
+  </a>
+</li>
+<!--FIN--><!-- Scream 4 -->
 <li>
   <a href="../Peliculas/pelicula655.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
