--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 5 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Atrapado -->
+<li>
+  <a href="../Peliculas/pelicula657.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/oweXABnqA2QytEDuuspOn17Z09P.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Atrapado 2021</span>
+    <span class="hidden">Jesús es un joven foráneo quien tendrá que aprender cómo tomar decisiones y afrontar diversos retos de la vida en medio de la pandemia, esto mientras se encuentra encerrado en el departamento que renta.</span>
+  </a>
+</li>
+<!--FIN--><!-- Scream 5 -->
 <li>
   <a href="../Peliculas/pelicula656.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
