--- a/Categorias/crimen/index.html
+++ b/Categorias/crimen/index.html
@@ -71,7 +71,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Scream: Grita antes de morir -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Scream 6 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula658.html">
+    <img src="https://image.tmdb.org/t/p/original/zh0JffFtxcWEJBLKayH3d34WnNT.jpg" alt="Scream 6" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Scream 6</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- Scream: Grita antes de morir -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula652.html">
     <img src="https://image.tmdb.org/t/p/original/jSyDHeFEGghtm624mWpuadcG6Gl.jpg" alt="Scream: Grita antes de morir" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
