--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -41,7 +41,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Atrapado -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Hijo de Dios -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula659.html">
+    <img src="https://image.tmdb.org/t/p/original/pJ2qK5r3zqXhB0MQxkAmEPZSSXF.jpg" alt="Hijo de Dios" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Hijo de Dios</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- Atrapado -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula657.html">
     <img src="https://image.tmdb.org/t/p/original/oweXABnqA2QytEDuuspOn17Z09P.jpg" alt="Atrapado" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
