--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -254,7 +254,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Scream 6 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hijo de Dios -->
+<li>
+  <a href="../Peliculas/pelicula659.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pJ2qK5r3zqXhB0MQxkAmEPZSSXF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Hijo de Dios 2014</span>
+    <span class="hidden">Juan, el último discípulo sobreviviente de Cristo, que vive en el exilio, cuenta su historia.  Jesús nace de una virgen (Leila Mimmack), y entonces tres hombres sabios lo visitan y declaran que va a ser el futuro rey. 33 años después, un adulto, Jesucristo (Diogo Morgado) viaja a Galilea y comienza a reclutar seguidores, a Santiago, a su hermano Juan, a Pedro el pescador, a Mateo, el recaudador de impuestos. Estos hombres se convertirían en sus discípulos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Scream 6 -->
 <li>
   <a href="../Peliculas/pelicula658.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
