--- a/Categorias/sci-fi&fantasy/index.html
+++ b/Categorias/sci-fi&fantasy/index.html
@@ -43,7 +43,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman del futuro -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Attack on Titan -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie72.html">
+    <img src="https://image.tmdb.org/t/p/original/yFPQ4JhhirnCVe2UIKGMYX7TOGZ.jpg" alt="Attack on Titan" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Attack on Titan</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- Batman del futuro -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie71.html">
     <img src="https://image.tmdb.org/t/p/original/rpbHPyhLstNd5qgtjaDMdPtyPeQ.jpg" alt="Batman del futuro" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
