--- a/Plataforma/anime/index.html
+++ b/Plataforma/anime/index.html
@@ -44,7 +44,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira- -->
+    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Attack on Titan -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Series/serie72.html">
+    <img src="https://image.tmdb.org/t/p/original/yFPQ4JhhirnCVe2UIKGMYX7TOGZ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Attack on Titan</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira- -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula609.html">
     <img src="https://image.tmdb.org/t/p/original/8g56u2k9CvMHP5IG257QVj9gj1b.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
